--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: Verdana;
 }
 .body{
-    background-image: url(/bg.png);
+    background-image: url(./bg.png);
     background-size: cover;
     background-position: center;
 }
