--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     align-items: center;
     height:100vh;
     width:100%;
-    background-image: url(/bg.png);
+    background-image: url(./bg.png);
     background-size: cover;
     background-position: center;
    
